testsuite/tests/interpreter_errors/binop_type_error/test.out
main.adb

Error: Expected Int but got Str

15 + "Hello"
^^^^^^^^^^^^

